Correction contrastes

--- a/modified/style.css
+++ b/modified/style.css
@@ -653,7 +653,7 @@ label,
 a {
   font-family: "helvetica";
   font-weight: 400;
-  color: #575757 !important;
+  color: #202020 !important;
 }
 
 .container {
@@ -725,7 +725,7 @@ h3 {
 }
 
 h1 {
-  color: #333333 !important;
+  color: black !important;
 }
 
 h4 {
